# CompactFEMLib

./: CMakeLists.txt  Femkernel_Test.cpp  Geokernel_Test.cpp  Postprocessing_Test.cpp  README.md  Utilities_Test.cpp
Femkernel/: AbsMeshFactory.cpp  AbsMeshFactory.h  AbsMesher.cpp  AbsMesher.h  Assembler.cpp  Assembler.h  LinearTriangle.cpp  LinearTriangle.h  MeshFactory2D.cpp  MeshFactory2D.h  Mesher2D.cpp  Mesher2D.h  TriangularEFT.cpp  TriangularEFT.h  Types.h
Geokernel/: AbsGeometry.cpp  AbsGeometry.h  AbsGeometryElement.cpp  AbsGeometryElement.h  BoundaryFrame.cpp  BoundaryFrame.h  ConvexHull.cpp  ConvexHull.h  Edge.cpp  Edge.h  GeometryTypes.cpp  GeometryTypes.h  PrimaryTypes.cpp  PrimaryTypes.h  ProblemType.cpp  ProblemType.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
Mathkernel/: harmonicSolver.h  modalAnalysis.h  pcgsolver.h
Postprocessing/: PostProcess.cpp  PostProcess.h  Types.h
Utilities/: Bithacks.h  Constants.h
